# uk-ufo-map

./: .gitignore  README.md
data-sanitation/: pdf-list.txt  pyproject.toml
data-sanitation/csv-output/: UFOReport1998.csv  UFOReport1999.csv  UFOReport2000.csv  UFOReport2001.csv  ufo_report_1997.csv  ufo_report_2007.csv  ufo_report_2008.csv  ufo_report_2009.csv
data-sanitation/ufo-map/: fetch_csv.py  transpose_sightings.py
ufo-map-js/: package-lock.json  package.json
ufo-map-js/public/: index.html
ufo-map-js/src/: AppBar.js  IncidentTable.js  MapChart.js  index.js
ufo-map-js/src/data/: sighting_geos.json
